--- a/pom.xml
+++ b/pom.xml
@@ -108,22 +108,36 @@
           <artifactId>maven-resources-plugin</artifactId>
           <version>3.0.2</version>
         </plugin>
+        
         <plugin>
           <artifactId>maven-compiler-plugin</artifactId>
           <version>3.8.0</version>
+          <!-- COMPATIBILIDAD CON JAVA 17, CONFIGURACION CON LA QUE SE ESCRIBE CODIGO FUENTE JAVA + CON LA QUE SE COMPILA EL CODIGO-->
+          <configuration>
+    		<source>17</source>
+    		<target>17</target>
+		</configuration>
         </plugin>
+        
         <plugin>
           <artifactId>maven-surefire-plugin</artifactId>
           <version>2.22.1</version>
         </plugin>
+        
         <plugin>
           <artifactId>maven-war-plugin</artifactId>
           <version>3.2.2</version>
+          <!-- en caso de que no tengamos un fichero web.xml (fichero de DESPLIEGUE) NO DEBERÍA FALLAR ese despliegue.-->
+          <configuration>
+			  <failOnMissingWebXml>false</failOnMissingWebXml>
+          </configuration>
         </plugin>
+        
         <plugin>
           <artifactId>maven-install-plugin</artifactId>
           <version>2.5.2</version>
         </plugin>
+        
         <plugin>
           <artifactId>maven-deploy-plugin</artifactId>
           <version>2.8.2</version>
