--- a/pom.xml
+++ b/pom.xml
@@ -91,6 +91,14 @@
     	<artifactId>jakarta.servlet.jsp.jstl</artifactId>
     	<version>3.0.1</version>
 	</dependency>
+	
+	<!-- https://mvnrepository.com/artifact/org.codehaus.cargo/cargo-core-container-tomcat -->
+	<!-- cargo: se encarga de arrancar un Tomcat embebido-->
+	<dependency>
+    	<groupId>org.codehaus.cargo</groupId>
+    	<artifactId>cargo-core-container-tomcat</artifactId>
+    	<version>1.10.7</version>
+	</dependency>
 
   </dependencies>
 
@@ -134,6 +142,18 @@
         </plugin>
         
         <plugin>
+			<groupId>org.codehaus.cargo</groupId>
+			<artifactId>cargo-maven3-plugin</artifactId>
+			<version>1.10.13</version>
+			<configuration>
+				<container>
+					<containerId>tomcat10</containerId>
+					<type>embedded</type>
+				</container>
+			</configuration>
+		</plugin>
+        
+        <plugin>
           <artifactId>maven-install-plugin</artifactId>
           <version>2.5.2</version>
         </plugin>
@@ -142,6 +162,8 @@
           <artifactId>maven-deploy-plugin</artifactId>
           <version>2.8.2</version>
         </plugin>
+        
+        
       </plugins>
     </pluginManagement>
   </build>
