--- a/pom.xml
+++ b/pom.xml
@@ -147,14 +147,15 @@
         <plugin>
 			<groupId>org.codehaus.cargo</groupId>
 			<artifactId>cargo-maven3-plugin</artifactId>
-			<version>1.10.13</version>
+			<version>1.10.6</version>
 			<configuration>
 				<container>
-					<containerId>tomcat10</containerId>
+					<containerId>tomcat10x</containerId>
 					<type>embedded</type>
 				</container>
 			</configuration>
 		</plugin>
+		<!-- Importante: version 1.10.6 ; containerId como tomcat10x  ;sin la x no funciona, ya que busca de entre todas las versiones de tomcat10-->
         
         <plugin>
           <artifactId>maven-install-plugin</artifactId>
