--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
       <scope>test</scope>
     </dependency>
     
+     <!--   DEPENDENCIAS DE HIBERNATE (ORM) Y DE MYSQL  ; NO USAREÉ SPRING, NI JDBC...   -->
     <!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-core -->
 	<dependency>
    		<groupId>org.hibernate</groupId>
@@ -39,6 +40,15 @@
     	<groupId>com.mysql</groupId>
     	<artifactId>mysql-connector-j</artifactId>
     	<version>8.3.0</version>
+	</dependency>
+	
+	
+	<!-- PERSISTENCIA: PARA TRABAAJR CON JPA - JAKARTA API-->
+    <!-- https://mvnrepository.com/artifact/jakarta.persistence/jakarta.persistence-api -->
+	<dependency>
+    	<groupId>jakarta.persistence</groupId>
+    	<artifactId>jakarta.persistence-api</artifactId>
+    	<version>3.2.0</version>
 	</dependency>
 	
 	  <!-- JAKARTA dependencies: scope: provided ==> solo para compilar la app (lo soporta ya Tomcat); 
