--- a/pom.xml
+++ b/pom.xml
@@ -20,13 +20,15 @@
   </properties>
 
   <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.11</version>
-      <scope>test</scope>
-    </dependency>
-    
+    <!-- JUNIT5 (PRUEBAS UNITARIAS)-->
+    <!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
+	<dependency>
+    	<groupId>org.junit.jupiter</groupId>
+    	<artifactId>junit-jupiter-api</artifactId>
+    	<version>5.10.2</version>
+    	<scope>test</scope>
+	</dependency>
+
      <!--   DEPENDENCIAS DE HIBERNATE (ORM) Y DE MYSQL  ; NO USAREÉ SPRING, NI JDBC...   -->
     <!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-core -->
 	<dependency>
